
name:          iho-s57
version:       0.2.0
build-type:    Simple
cabal-version: >= 1.18

extra-source-files:  README.md
license-file:        LICENSE.txt
license:             BSD3
author:              Markus Barenhoff
maintainer:          mbarenh@alios.org

tested-with:  GHC == 7.8.3
library
    default-language: Haskell2010
    exposed-modules: Data.IHO.S57
                     Data.IHO.S57.CATD
                     Data.IHO.S57.DSID
                     Data.IHO.S57.DSPM
                     Data.IHO.S57.FRID
                     Data.IHO.S57.VRID
                     Data.IHO.S57.Parser
                     Data.IHO.S57.Reader
                     Data.IHO.S57.Types
    hs-source-dirs:  library
    build-depends:   base,
                     containers,
                     bytestring,
                     binary,
                     mtl,
                     exceptions, 
                     text,
                     tables >= 0.4,
                     lens >= 4.6,
                     attoparsec >= 0.12,
                     groom,
                     conduit >= 1.2,
                     conduit-extra >= 1.1,
                     resourcet >= 1.1,
                     transformers >= 0.3,
                     async >= 2

    ghc-prof-options: -auto-all -prof

