
name:          iho-s57
version:       0.2.1
build-type:    Simple
cabal-version: >= 1.18

extra-source-files:  README.md
license-file:        LICENSE.txt
license:             BSD3
author:              Markus Barenhoff
maintainer:          mbarenh@alios.org

tested-with:  GHC == 7.8.3
library
    default-language: Haskell2010
    exposed-modules: Data.IHO.S57
                     Data.IHO.S57.CATD
                     Data.IHO.S57.DSID
                     Data.IHO.S57.DSPM
                     Data.IHO.S57.FRID
                     Data.IHO.S57.VRID
                     Data.IHO.S57.Parser
                     Data.IHO.S57.Reader
                     Data.IHO.S57.Types
    hs-source-dirs:  library
    build-depends:   async >= 2,
                     attoparsec >= 0.12,
                     base,
                     binary,
                     bytestring,
                     conduit >= 1.2,
                     conduit-extra >= 1.1,
                     containers,
                     exceptions,
                     groom,
                     hashable >= 1.2,
                     lens >= 4.6,
                     mtl,
                     resourcet >= 1.1,
                     text,
                     transformers >= 0.3,
                     unordered-containers >= 0.2

    ghc-prof-options: -auto-all -prof
    ghc-options:      -threaded -O2 -Wall
executable test
    default-language:  Haskell2010
    build-depends:   base,
                     conduit,
                     conduit-extra,
                     groom,
                     hashable >= 1.2,
                     iho-s57,
                     lens,
                     resourcet,
                     text,
                     unordered-containers >= 0.2
    main-is:         Main.hs
    ghc-options:      -threaded -O2 -Wall